Fix for the jump in the clingy navigation bar

--- a/styles/style_ar15fans/theme/nav.css
+++ b/styles/style_ar15fans/theme/nav.css
@@ -2,6 +2,9 @@
 * CSS3 animated dropdown menu
 * Stolen from: http://www.red-team-design.com/css3-animated-dropdown-menu
 */
+#nav-wrap {
+	height: 37px;
+}
 #nav,
 #nav ul {
 	margin: 0;
